# self-requirement

./: README.md
core/: README.md
core/CS101/: README.md  test.md
core/CS101/computer-literacy/: README.md
core/CS101/programming-languages/: README.md
core/books/: README.md  question_to_look_for.txt
core/books/programming/linux-system-programming/: NOTE  USAGE
core/books/programming/linux-system-programming/code/: get_num.c  (+7 more)
core/programming/algorithms/graphs/: breadth_first_search.rs  dijkstra.rs
core/programming/algorithms/sorts/: bubble_sort.rs  bucket_sort.rs  insertion_sort.rs
core/programming/basic_rust/learn_closure/: closure.rs  closure_only  closure_only.rs
core/programming/basic_rust/understand_ownership/: main  main.rs
core/programming/design_pattern/: README.md
core/programming/design_pattern/behavioural/: chain_of_responsibility.rs  command.rs  state.rs  strategy.rs
core/programming/design_pattern/creational/: builder.rs  factory.rs  singleton.rs
core/programming/design_pattern/structural/: adapter.rs  decorator.rs  proxy.rs
core/programming/design_principles/: README.md
core/programming/p2p-network/rust-p2p-example/: Cargo.toml
core/programming/simple-microservices/: Cargo.toml
core/programming/simple-microservices/src/: main.rs
core/programming/simple-project/dmfyt/: Cargo.toml  README
core/programming/simple-project/todo/: Cargo.toml  README.md
core/programming/std/collections/: HashMap.rs  HashSet.rs  collections.txt  linkedlink.rs  track_inebvriation.rs
core/researching/: README.md
requirements/: first.md
(+18 files in other folders)
