[package]
name = "rust-p2p-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.46.1"
tokio = "1.20.1"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
once_cell = "1.13.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
async-std = { version = "1.12.0", features = ["attributes"] } 
futures = "0.3.23"
env_logger = "0.9.0"
